# TIti

./: .gitignore  CMakeLists.txt  Makefile  README.md  client_app  module_status.md  server  server.c  server.h  test_builder  test_connection  test_protocol  test_session  test_utils
client/: client.c  client.h  main.c  ui.c  ui.h
core/: connection_manager.c  core.h  message_router.c  session_manager.c
docs/: function_summary.md  module_status.md
models/: models.h
network/: client_handler.c  event_loop.c  network.h  tcp_client.c  tcp_server.c
protocol/: builder.c  command_dandler.c  parser.c  protocol.h
src/client/: client.c  client.h  client_commands.c  client_commands.h  main.c  tui_main.c  ui.c  ui.h
src/core/: connection_manager.c  core.h  message_router.c  session_manager.c
src/models/: models.h
src/network/: client_handler.c  event_loop.c  network.h  tcp_client.c  tcp_server.c
src/platform/: platform.h
src/protocol/: builder.c  command_dandler.c  parser.c  protocol.h
src/server/: server.c  server.h
src/storage/: storage.h
src/tui/: tui.h  tui_ncurses.c  tui_pdcurses.c
src/utils/: logger.c  safe_utils.c  time_utils.c  utils.h
storage/: storage.c  storage.h  user_store.c
tests/: resr_core.c  test_builder.c  test_connection.c  test_core.c  test_core_simple.c  test_protocol.c  test_session.c  test_utils.c
utils/: logger.c  safe_utils.c  time_utils.c  utils.h
